--- a/application/index/view/task/in-task.html
+++ b/application/index/view/task/in-task.html
@@ -30,7 +30,7 @@
             <th>任务编号</th>
             <th>产品图号</th>
             <th>产品名称</th>
-            <th>外来图号</th>
+            <!--<th>外来图号</th>-->
             <th>材料</th>
             <th>数量</th>
             <th>图纸工艺</th>
@@ -41,9 +41,9 @@
             <th>是否完成</th>
             {/if}
             <th>要求日期</th>
-            <th>设备名称</th>
-            <th>创建人</th>
-            <th>创建时间</th>
+            <!--<th>设备名称</th>-->
+            <!--<th>创建人</th>-->
+            <!--<th>创建时间</th>-->
             <th>备注</th>
             <th>操作</th>
             </tr>
@@ -51,7 +51,6 @@
         <tbody>
         {volist name="productTaskInfo" id="info"}
         <?php $blueprintInfoList = getblueprintInfo($info['order_detial_id']);?>
-
         <tr>
             <td>
               <div class="layui-unselect layui-form-checkbox" lay-skin="primary" data-id='2'><i class="layui-icon">&#xe605;</i></div>
@@ -59,7 +58,9 @@
             <td>{$info.task_id}</td>
             <td>{$blueprintInfoList.drawing_detail_id}</td>
             <td>{$info.order_detial_id|getOrderDrawingName}</td>
-            <td></td>
+
+            <!--<td> <a title="序号{$blueprintInfoList.drawing_externa_id}" onclick="x_admin_show('<span class=\'layui-badge layui-bg-blue\'>{$blueprintInfoList.drawing_externa_id}</span> 的所有明细','{:url(\'index/Blueprint/blueprintInfo\', [\'modules\' => $blueprintInfoList.drawing_externa_id])}')" href="javascript:;"><i class="layui-icon " style="color: #1E9FFF">{$blueprintInfoList.drawing_externa_id}</i></a></td>-->
+
             <td>{$blueprintInfoList.material|getMaterialType}</td>
             <td>{$info.task_qty}</td>
             <td class="td-manage">
@@ -95,13 +96,13 @@
               {/if}
             </td>
           {/if}
-          <td></td>
-          <td>
-            <?php $equipmentInfo = getEquipmentInfo($info['eqpmt_id']);?>
-             {$equipmentInfo.eqpmt_name}
-          </td>
-          <td>{$info.create_name}</td>
-          <td>{$info.create_time}</td>
+          <td><a href=""></a></td>
+          <!--<td>-->
+            <!--&lt;!&ndash;<?php $equipmentInfo = getEquipmentInfo($info['eqpmt_id']);?>&ndash;&gt;-->
+             <!--&lt;!&ndash;{$equipmentInfo.eqpmt_name}&ndash;&gt;-->
+          <!--</td>-->
+          <!--<td>{$info.create_name}</td>-->
+          <!--<td>{$info.create_time}</td>-->
           <td>{$info.remark}</td>
             <td class="td-manage">
               <button class="layui-btn layui-btn layui-btn-xs"  onclick="x_admin_show('编辑','{:url(\'index/Task/editTask\',[\'id\'=>$info.id])}',600,500)" ><i class="layui-icon">&#xe642;</i>编辑</button>
