--- a/application/index/view/test_record/add_show.html
+++ b/application/index/view/test_record/add_show.html
@@ -21,13 +21,13 @@
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label">实际尺寸1</label>
+            <label class="layui-form-label">员工实测</label>
             <div class="layui-input-block" >
                 <input type="text" class="layui-input" name="real_dim1" value="">
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label">实际尺寸2</label>
+            <label class="layui-form-label">检验实测</label>
             <div class="layui-input-block" >
                 <input type="text" class="layui-input" name="real_dim2" value="">
             </div>
