--- a/application/index/view/test_record/view_index.html
+++ b/application/index/view/test_record/view_index.html
@@ -26,8 +26,8 @@
                 <th>操作</th>
                 <th>序号</th>
                 <th>名义尺寸</th>
-                <th>实际尺寸1</th>
-                <th>实际尺寸2</th>
+                <th>员工实测</th>
+                <th>检验实测</th>
                 <th>备注</th>
               </tr>
             </thead>
