--- a/application/index/view/test_record/quality_show.html
+++ b/application/index/view/test_record/quality_show.html
@@ -13,13 +13,13 @@
         <div class="layui-form-item">
             <label class="layui-form-label">质量描述</label>
             <div class="layui-input-block" >
-                <input type="text" class="layui-input" name="quality" value="{$list.quality}">
+                <textarea placeholder="请输入内容" class="layui-textarea" name="quality">{$list.quality}</textarea>
             </div>
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label">错误原因</label>
             <div class="layui-input-block" >
-                <input type="text" class="layui-input" name="cause" value="{$list.cause}">
+                <textarea placeholder="请输入内容" class="layui-textarea" name="cause">{$list.cause}</textarea>
             </div>
         </div>
         <div class="layui-form-item">
@@ -31,9 +31,160 @@
         <div class="layui-form-item">
             <label class="layui-form-label">落实跟踪</label>
             <div class="layui-input-block" >
-                <input type="text" class="layui-input" name="result" value="{$list.result}">
+                <textarea placeholder="请输入内容" class="layui-textarea" name="result">{$list.result}</textarea>
             </div>
         </div>
+        <div style="border: 2px black solid;box-shadow: 10px 10px 5px #888888;">
+            <br><br>
+            <div class="layui-form-item" {$list.person1==""?"hidden":""}  id="person1Div">
+                <label class="layui-form-label">责任人1</label>
+                <div class="layui-input-block">
+                    {if $list.person1}
+                    <a class="layui-btn" title="点击取消签名" id="person1Qx">{$list.person1} / {$list.person1Time} / 取消签名</a>
+                    {else}
+                    <a class="layui-btn" id="person1Btn" hidden>等待签名</a>
+                    {/if}
+                    <script>
+                        $(function () {
+                            $("#person1Qx").click(function () {
+                                $("#person1Qx").text("已取消，请先保存");
+                                $("#person1").val("");
+                                $("#person1Time").val("");
+                                $("#person1CostDiv").hide();
+                                $("#person1Cost").val("");
+                            });
+                        });
+                    </script>
+                    <input type="hidden" class="layui-input" name="person1" id="person1" value="{$list.person1}">
+                </div>
+            </div>
+            <div class="layui-form-item" hidden>
+                <label class="layui-form-label">责任人1日期</label>
+                <div class="layui-input-block">
+                    <input type="text" class="layui-input" name="person1Time" id="person1Time" value="{$list.person1Time}">
+                </div>
+            </div>
+            <div class="layui-form-item" id="person1CostDiv" {$list.person1==""?"hidden":""}>
+                <label class="layui-form-label">1-金额</label>
+                <div class="layui-input-inline">
+                    <input type="text" class="layui-input" name="person1Cost" id="person1Cost" value="{$list.person1Cost}">
+                </div>
+            </div>
+            <div class="layui-form-item" {$list.person2==""?"hidden":""} id="person2Div">
+                <label class="layui-form-label">责任人2</label>
+                <div class="layui-input-block" >
+                    {if $list.person2}
+                    <a class="layui-btn" title="点击取消签名" id="person2Qx">{$list.person2} / {$list.person2Time} / 取消签名</a>
+                    {else}
+                    <a class="layui-btn" id="person2Btn" hidden>等待签名</a>
+                    {/if}
+                    <script>
+                        $(function () {
+                            $("#person2Qx").click(function () {
+                                $("#person2Qx").text("已取消，请先保存");
+                                $("#person2").val("");
+                                $("#person2Time").val("");
+                                $("#person2CostDiv").hide();
+                                $("#person2Cost").val("");
+                            });
+                        });
+                    </script>
+                    <input type="hidden" class="layui-input" name="person2" id="person2" value="{$list.person2}">
+                </div>
+            </div>
+            <div class="layui-form-item" hidden>
+                <label class="layui-form-label">责任人2日期</label>
+                <div class="layui-input-block" >
+                    <input type="text" class="layui-input" name="person2Time" id="person2Time" value="{$list.person2Time}">
+                </div>
+            </div>
+            <div class="layui-form-item" id="person2CostDiv" {$list.person2==""?"hidden":""}>
+                <label class="layui-form-label">2-金额</label>
+                <div class="layui-input-inline">
+                    <input type="text" class="layui-input" name="person2Cost" id="person2Cost" value="{$list.person2Cost}">
+                </div>
+            </div>
+            <div class="layui-form-item" {$list.person3==""?"hidden":""} id="person3Div">
+                <label class="layui-form-label">责任人3</label>
+                <div class="layui-input-block" >
+                    {if $list.person3}
+                    <a class="layui-btn" title="点击取消签名" id="person3Qx">{$list.person3} / {$list.person3Time} / 取消签名</a>
+                    {else}
+                    <a class="layui-btn" id="person3Btn" hidden>等待签名</a>
+                    {/if}
+                    <script>
+                        $(function () {
+                            $("#person3Qx").click(function () {
+                                $("#person3Qx").text("已取消，请先保存");
+                                $("#person3").val("");
+                                $("#person3Time").val("");
+                                $("#person3CostDiv").hide();
+                                $("#person3Cost").val("");
+                            });
+                        });
+                    </script>
+                    <input type="hidden" class="layui-input" name="person3" id="person3" value="{$list.person3}">
+                </div>
+            </div>
+            <div class="layui-form-item" hidden>
+                <label class="layui-form-label">责任人3日期</label>
+                <div class="layui-input-block" >
+                    <input type="text" class="layui-input" name="person3Time" id="person3Time" value="{$list.person3Time}">
+                </div>
+            </div>
+            <div class="layui-form-item" id="person3CostDiv" {$list.person3==""?"hidden":""}>
+                <label class="layui-form-label">3-金额</label>
+                <div class="layui-input-inline">
+                    <input type="text" class="layui-input" name="person3Cost" id="person3Cost" value="{$list.person3Cost}">
+                </div>
+            </div>
+            <center><button class="layui-btn" type="button" lay-submit id="allQm">责任人签名</button></center>
+            <script>
+                $(function () {
+                    $("#allQm").click(function () {
+                        var person1 = $("#person1").val();
+                        var person2 = $("#person2").val();
+                        var person3 = $("#person3").val();
+
+                        if(!person1){
+                            $("#person1Btn").text("{$Think.session.user.user_name} / {:date('Y-m-d H:i:s')}");
+                            $("#person1Btn").show();
+                            $("#person1Div").show();
+                            $("#person1CostDiv").show();
+                            $("#person1").val("{$Think.session.user.user_name}");
+                            $("#person1Time").val("{:date('Y-m-d H:i:s')}");
+
+                            return false;
+                        }
+
+                        if (!person2){
+                            $("#person2Btn").text("{$Think.session.user.user_name} / {:date('Y-m-d H:i:s')}");
+                            $("#person2Btn").show();
+                            $("#person2Div").show();
+                            $("#person2CostDiv").show();
+                            $("#person2").val("{$Think.session.user.user_name}");
+                            $("#person2Time").val("{:date('Y-m-d H:i:s')}");
+                            return false;
+                        }
+
+                        if(!person3){
+                            $("#person3Btn").text("{$Think.session.user.user_name} / {:date('Y-m-d H:i:s')}");
+                            $("#person3Btn").show();
+                            $("#person3Div").show();
+                            $("#person3CostDiv").show();
+                            $("#person3").val("{$Think.session.user.user_name}");
+                            $("#person3Time").val("{:date('Y-m-d H:i:s')}");
+                            return false;
+                        }
+                        if(person1 && person2 && person3){
+                            layer.alert("签名人数已到上限", {icon: 5,time:700});
+                        }
+                    });
+                });
+            </script>
+            <br><br>
+        </div>
+        <br><br>
         <div class="layui-form-item">
             <label class="layui-form-label">落实人员</label>
             <div class="layui-input-block" >
@@ -119,126 +270,6 @@
                 <input type="hidden" class="layui-input" name="manager" id="manager" value="{$list.manager}">
             </div>
         </div>
-        <div style="border: 2px black solid;box-shadow: 10px 10px 5px #888888;">
-            <br><br>
-            <div class="layui-form-item">
-                <label class="layui-form-label">责任人1</label>
-                <div class="layui-input-block">
-                    {if $list.person1}
-                    <a class="layui-btn" title="点击取消签名" id="person1Qx">{$list.person1} / {$list.person1Time} / 取消签名</a>
-                    {else}
-                    <a class="layui-btn" id="person1Btn" hidden>等待签名</a>
-                    {/if}
-                    <script>
-                        $(function () {
-                            $("#person1Qx").click(function () {
-                                $("#person1Qx").text("已取消，请先保存");
-                                $("#person1").val("");
-                                $("#person1Time").val("");
-                            });
-                        });
-                    </script>
-                    <input type="hidden" class="layui-input" name="person1" id="person1" value="{$list.person1}">
-                </div>
-            </div>
-            <div class="layui-form-item" hidden>
-                <label class="layui-form-label">责任人1日期</label>
-                <div class="layui-input-block">
-                    <input type="text" class="layui-input" name="person1Time" id="person1Time" value="{$list.person1Time}">
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">责任人2</label>
-                <div class="layui-input-block" >
-                    {if $list.person2}
-                    <a class="layui-btn" title="点击取消签名" id="person2Qx">{$list.person2} / {$list.person2Time} / 取消签名</a>
-                    {else}
-                    <a class="layui-btn" id="person2Btn" hidden>等待签名</a>
-                    {/if}
-                    <script>
-                        $(function () {
-                            $("#person2Qx").click(function () {
-                                $("#person2Qx").text("已取消，请先保存");
-                                $("#person2").val("");
-                                $("#person2Time").val("");
-                            });
-                        });
-                    </script>
-                    <input type="hidden" class="layui-input" name="person2" id="person2" value="{$list.person2}">
-                </div>
-            </div>
-            <div class="layui-form-item" hidden>
-                <label class="layui-form-label">责任人2日期</label>
-                <div class="layui-input-block" >
-                    <input type="text" class="layui-input" name="person2Time" id="person2Time" value="{$list.person2Time}">
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">责任人3</label>
-                <div class="layui-input-block" >
-                    {if $list.person3}
-                    <a class="layui-btn" title="点击取消签名" id="person3Qx">{$list.person3} / {$list.person3Time} / 取消签名</a>
-                    {else}
-                    <a class="layui-btn" id="person3Btn" hidden>等待签名</a>
-                    {/if}
-                    <script>
-                        $(function () {
-                            $("#person3Qx").click(function () {
-                                $("#person3Qx").text("已取消，请先保存");
-                                $("#person3").val("");
-                                $("#person3Time").val("");
-                            });
-                        });
-                    </script>
-                    <input type="hidden" class="layui-input" name="person3" id="person3" value="{$list.person3}">
-                </div>
-            </div>
-            <div class="layui-form-item" hidden>
-                <label class="layui-form-label">责任人3日期</label>
-                <div class="layui-input-block" >
-                    <input type="text" class="layui-input" name="person3Time" id="person3Time" value="{$list.person3Time}">
-                </div>
-            </div>
-            <center><button class="layui-btn" type="button" lay-submit id="allQm">责任人签名</button></center>
-            <script>
-                $(function () {
-                    $("#allQm").click(function () {
-                       var person1 = $("#person1").val();
-                       var person2 = $("#person2").val();
-                       var person3 = $("#person3").val();
-
-                        if(!person1){
-                            $("#person1Btn").text("{$Think.session.user.user_name} / {:date('Y-m-d H:i:s')}");
-                            $("#person1Btn").show();
-                            $("#person1").val("{$Think.session.user.user_name}");
-                            $("#person1Time").val("{:date('Y-m-d H:i:s')}");
-                            return false;
-                        }
-
-                        if (!person2){
-                            $("#person2Btn").text("{$Think.session.user.user_name} / {:date('Y-m-d H:i:s')}");
-                            $("#person2Btn").show();
-                            $("#person2").val("{$Think.session.user.user_name}");
-                            $("#person2Time").val("{:date('Y-m-d H:i:s')}");
-                            return false;
-                        }
-
-                        if(!person3){
-                            $("#person3Btn").text("{$Think.session.user.user_name} / {:date('Y-m-d H:i:s')}");
-                            $("#person3Btn").show();
-                            $("#person3").val("{$Think.session.user.user_name}");
-                            $("#person3Time").val("{:date('Y-m-d H:i:s')}");
-                            return false;
-                        }
-                        if(person1 && person2 && person3){
-                            layer.alert("签名人数已到上限", {icon: 5,time:700});
-                        }
-                    });
-                });
-            </script>
-            <br><br>
-        </div>
-        <br><br>
         <div class="layui-form-item">
             <label class="layui-form-label">备注</label>
             <div class="layui-input-block" >
