--- a/application/index/view/order/order_edit_detail.html
+++ b/application/index/view/order/order_edit_detail.html
@@ -17,15 +17,22 @@
         <input type="text" id="plan_qty"  name="plan_qty" value="{$ordeDetailRow.plan_qty}"  lay-verify="required" autocomplete="off" class="layui-input" >
       </div>
     </div>
-    <div class="layui-form-item">
-      <label for="arrange" class="layui-form-label">加工安排</label>
-        <div class="layui-input-inline" style="width: 120px;">
-          <select  name="arrange">
-            <option value="整体外协" {if $ordeDetailRow.arrange == '整体外协'} selected {/if}>整体外协</option>
-            <option value="自加工" {if $ordeDetailRow.arrange == '自加工'} selected {/if}>自加工</option>
-            <option value="标件不加工" {if $ordeDetailRow.arrange == '标件不加工'} selected {/if}>标件不加工</option>
-            <option value="外协完成" {if $ordeDetailRow.arrange == '外协完成'} selected {/if}>外协完成</option>
-          </select>
+    <!--<div class="layui-form-item">-->
+      <!--<label for="arrange" class="layui-form-label">加工安排</label>-->
+        <!--<div class="layui-input-inline" style="width: 120px;">-->
+          <!--<select  name="arrange">-->
+            <!--<option value="整体外协" {if $ordeDetailRow.arrange == '整体外协'} selected {/if}>整体外协</option>-->
+            <!--<option value="自加工" {if $ordeDetailRow.arrange == '自加工'} selected {/if}>自加工</option>-->
+            <!--<option value="标件不加工" {if $ordeDetailRow.arrange == '标件不加工'} selected {/if}>标件不加工</option>-->
+            <!--<option value="外协完成" {if $ordeDetailRow.arrange == '外协完成'} selected {/if}>外协完成</option>-->
+          <!--</select>-->
+      <!--</div>-->
+    <!--</div>-->
+
+    <div class="layui-inline">
+      <label class="layui-form-label">加工安排</label>
+      <div class="layui-input-block">
+        <input type="checkbox"   {if '是'==$ordeDetailRow.arrange}checked=""{/if}   name="arrange" lay-skin="switch" lay-filter="switchTest" lay-text="是|否"><div class="layui-unselect layui-form-switch" lay-skin="_switch"><em>否</em><i></i></div>
       </div>
     </div>
     <div class="layui-form-item">
