--- a/application/index/view/order/order_detail_add.html
+++ b/application/index/view/order/order_detail_add.html
@@ -71,7 +71,7 @@
           <!--</div>-->
         <!--</div>-->
         <div class="layui-inline">
-          <label class="layui-form-label">加工安排</label>
+          <label class="layui-form-label">是否加工</label>
           <div class="layui-input-block">
             <input type="checkbox" name="arrange[]" lay-skin="switch" lay-filter="switchTest" lay-text="是|否"><div class="layui-unselect layui-form-switch" lay-skin="_switch"><em>否</em><i></i></div>
           </div>
