单据报价模块

--- a/application/index/view/public/left.html
+++ b/application/index/view/public/left.html
@@ -298,6 +298,12 @@
                             <cite>送货单</cite>
                         </a>
                     </li >
+                    <li>
+                        <a _href="{:url('index/Quote/viewShow',['action'=>0])}">
+                            <i class="iconfont">&#xe6a7;</i>
+                            <cite>报价单据</cite>
+                        </a>
+                    </li >
                 </ul>
             </li>
             {/if}
