--- a/application/index/view/public/header.html
+++ b/application/index/view/public/header.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
     <meta http-equiv="Cache-Control" content="no-siteapp" />
-
+    <meta name="keywords" content="机械,过程管理,制造业">
     <link rel="shortcut icon" href="__STATIC__/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="__STATIC__/css/font.css">
     <link rel="stylesheet" href="__STATIC__/css/xadmin.css">
