--- a/application/index/view/delivery/delivery-details.html
+++ b/application/index/view/delivery/delivery-details.html
@@ -48,7 +48,7 @@
                   <i  style="color:red;" class="layui-icon"></i>
                 </a>
                 <!--<a href="#" onclick="updateNum('{$info.deliveryInfoId}')" style="color:green;">修改</a>-->
-                <a href="#" onclick="x_admin_show('选择明细','{:url(\'index/Delivery/editOrder\',[\'id\'=>$info.id,\'quantity\'=>$info.quantity,\'remarks\'=>$info.remarks])}',500,300)" style="color:green;">
+                <a href="#" onclick="x_admin_show('修改明细','{:url(\'index/Delivery/editOrder\',[\'id\'=>$info.id,\'quantity\'=>$info.quantity,\'remarks\'=>$info.remarks])}',500,300)" style="color:green;">
                   <i style="color: green" class="layui-icon"></i>
                 </a>
               </td>
