--- a/application/index/view/quote/viewshow.html
+++ b/application/index/view/quote/viewshow.html
@@ -4,7 +4,7 @@
       <span class="layui-breadcrumb">
         <a href="">首页</a>
         <a href="">订单管理</a>
-        <a href="">单据报价</a>
+          <a href=""><cite>单据报价</cite></a>
       </span>
     <a class="layui-btn layui-btn-small" style="line-height:1.6em;margin-top:3px;float:right" href="{:url()}" title="刷新">
         <i class="layui-icon" style="line-height:30px">ဂ</i></a>
@@ -13,7 +13,7 @@
 <div class="x-body" >
     <xblock>
         <button class="layui-btn" onclick="x_admin_show('添加单据','{:url(\'index/Quote/addquote\')}',500,600)"><i class="layui-icon"></i>添加单据</button>
-        <a class="layui-btn" href="{:url('index/Quote/viewShow',['action'=>$action])}" title="{$action?'切换到已确认列表':'切换到未确认列表'}"><i class="layui-icon"></i>{$action?'切换到已确认列表':'切换到未确认列表'}</a>
+        <!--<a class="layui-btn" href="{:url('index/Quote/viewShow',['action'=>$action])}" title="{$action?'切换到已确认列表':'切换到未确认列表'}"><i class="layui-icon"></i>{$action?'切换到已确认列表':'切换到未确认列表'}</a>-->
         <span class="x-right" style="line-height:40px">共{$quoteCount}条 · 共{$quoteCount/25|getInt}页</span>
     </xblock>
     <div class="container-wrap">
