--- a/application/index/view/public/left.html
+++ b/application/index/view/public/left.html
@@ -299,17 +299,17 @@
                         </a>
                     </li >
                     <li>
-                        <a _href="{:url('index/BaoJia/viewShow')}">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>送货单->报价</cite>
-                        </a>
-                    </li >
-                    <li>
-                        <a _href="{:url('index/Quote/viewShow',['action'=>0])}">
+                        <a _href="{:url('index/BaoJia/viewShow',['action'=>0])}">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>报价单据</cite>
                         </a>
                     </li >
+                    <!--<li>-->
+                        <!--<a _href="{:url('index/Quote/viewShow',['action'=>0])}">-->
+                            <!--<i class="iconfont">&#xe6a7;</i>-->
+                            <!--<cite>报价单据</cite>-->
+                        <!--</a>-->
+                    <!--</li >-->
                 </ul>
             </li>
             {/if}
